# moai-dev

./: .gitignore
ant/: make-host.sh
ant/host-source/source/project/: AndroidManifest.xml
ant/host-source/source/project/src/app/: MoaiActivity.java
ant/host-source/source/project/src/moai/crittercism/: MoaiCrittercism.java
ant/libmoai/: build.sh
ant/libmoai/jni/: Android.mk
ant/libmoai/jni/src/: moai.cpp
ant/libmoai/jni/tge-extensions/: Android.mk
cmake/: CMakeLists.txt
cmake/host-android/: CMakeLists.txt
cmake/host-glut/: CMakeLists.txt
cmake/host-ios/: CMakeLists.txt  iOS.cmake  moai-Info.plist
cmake/moai-android/: CMakeLists.txt
cmake/moai-http-client/: CMakeLists.txt
cmake/moai-iphone/: CMakeLists.txt
cmake/moai/Images-2.xcassets/AppIcon.appiconset/: Contents.json
cmake/moai/Images-3.xcassets/LaunchImage.launchimage/: Contents.json
cmake/tge-extensions/: CMakeLists.txt
scons/: build.scons
src/host-glut/: GlutHost.cpp
src/host-ios/Classes/: DWTracking.h  DWTracking.mm  MoaiAppDelegate.h  MoaiAppDelegate.mm  MoaiVC.h  MoaiVC.mm  MoaiView.h  MoaiView.mm
src/host-ios/Classes/ATInternet/ATAssets.bundle/: ATDefaultConfiguration.plist  Info.plist
src/host-ios/Classes/ATInternet/ATAssets.bundle/ATTracker.momd/: ATTracker.mom  VersionInfo.plist
src/host-modules/: aku_modules.cpp  aku_modules.h
src/moai-android/: MOAIAdColonyAndroid.cpp  MOAIAdColonyAndroid.h  MOAIAppAndroid.h  MOAIBillingAndroid.h  MOAIDialogAndroid.cpp  MOAIKeyboardAndroid.cpp  MOAITapjoyAndroid.h  MOAITstoreGamecenterAndroid.cpp  MOAITstoreGamecenterAndroid.h
src/moai-box2d/: MOAIBox2DBody.cpp  MOAIBox2DBody.h  MOAIBox2DWorld.cpp
src/moai-core/: MOAILogMgr.cpp  MOAILuaRef.h  MOAILuaRuntime.cpp
src/moai-iphone/: AKU-iphone.h  AKU-iphone.mm  MOAIAppIOS.h  MOAIAppIOS.mm  MOAICrittercismIOS.mm  MOAIDialogIOS.h  MOAIPlayhavenIOS.h  MOAIPlayhavenIOS.mm  MOAIVungleIOS.mm
src/moai-sim/: MOAIInvalidHeader.cpp  MOAIInvalidHeader.h  MOAIPkmHeader.cpp  MOAIPkmHeader.h  MOAIPvrHeader.cpp  MOAIPvrHeader.h  MOAISim.cpp  MOAITexture.cpp  MOAITexture.h  MOAITextureBase.cpp  MOAITextureHeader.cpp  MOAITextureHeader.h
src/moai-untz/: MOAIUntzSound.cpp
src/tge-extensions/: DWTracking.cpp  DWTracking.h  MOAIPolygonPathGraph.cpp  MOAIPolygonPathGraph.h  TGEPolygon2D.cpp  TGEPolygon2D.h  host.cpp  host.h  pch.h
src/zl-gfx/: zl_gfx_opengl.cpp
src/zl-util/: ZLLeanArray.h
xcode/libmoai/libmoai.xcodeproj/: project.pbxproj
xcode/osx/MoaiSample.xcodeproj/: project.pbxproj
